--- a/samplewebproject/index.html
+++ b/samplewebproject/index.html
@@ -6,8 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="">
-    <label for="">Enter email</label>
+  <form>
+    <label>Enter email</label>
     <input />
     <button>Submit</button>
   </form>
